<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.capstone.invoice.InvoicePrintView">

    <TextView
        android:id="@+id/Estimate"
        android:text="@string/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/CompanyName"
        android:text="@string/CompanyName"
        android:layout_below="@+id/Estimate"
        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/CompanyStreet"
        android:text="@string/CompanyStreet"
        android:layout_below="@+id/CompanyName"
        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/CompanyCity"
        android:text="@string/CompanyCity"
        android:layout_below="@+id/CompanyStreet"
        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/CustomerFirst"
        android:text=""
        android:layout_below="@+id/CompanyCity"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/CustomerLast"
        android:text=""
        android:layout_below="@+id/CompanyCity"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/CustomerFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Street"
        android:text=""
        android:layout_below="@+id/CustomerFirst"

        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/City"
        android:text=""
        android:layout_below="@+id/Street"
        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/State"
        android:text=""
        android:layout_below="@+id/Street"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Zip"
        android:text=""
        android:layout_below="@+id/Street"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/State"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
    android:id="@+id/Phone"
    android:text=""
    android:layout_below="@+id/City"
    android:layout_alignLeft="@+id/Estimate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Const_Notes"
        android:text="@string/_Const_Notes"
        android:layout_below="@+id/Phone"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/Notes"
        android:text="This will show the max width went to the market got some groceries and looked at what was printed in the magazine"
        android:layout_below="@+id/Phone"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"

        android:layout_toRightOf="@+id/Const_Notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <View
        android:layout_alignLeft="@+id/Estimate"
        android:layout_below="@+id/Notes"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/ConstTotal"
        android:text="@string/Total"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/Notes"
        android:layout_alignLeft="@+id/Estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/Total"
        android:text="$0.00"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/Notes"
        android:layout_toRightOf="@+id/ConstTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/print"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
